# hackneyed-recommender

./: .gitignore  README.md  pyproject.toml
src/hackrec/: matrix.py  prepare.py  transform.py
src/hacrec/: adjustedbprfactorization.py  alsfactorization.py  api.py  baselines.py  biasedalsfactorization.py  biaseditembasedcf.py  bprfactorization.py  bprfactorizer.py  collaborativefiltering.py  eval.py  factorization.py  fit.py  implicitalsfactorization.py  itembasedcf.py  load.py  pipeline.py  prepare.py  recommender.py  recommender_registry.py  transform.py  util.py  visualize.py
tests/: conftest.py  test_fit.py  test_itembasedcf.py  test_load.py  test_transform.py  test_util.py
webapp/: app.js  dashboard.html  index.html  playground.html  recommender.html  style.css
