[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackrec"
version = "0.1.0"
description = "A basic recommender system project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "scipy"]

[tool.hatch.build.targets.wheel]
packages = ["src/hackrec"]

[project.scripts]
hackreceval = "hackrec.eval:main"